# logilica-cli

./: .gitignore  README.md  download_pdfs.py  logilica-cli.yaml  pyproject.toml  requirements.txt  teams_dashboards.txt  weekly_report.yaml
.github/workflows/: ci.yaml  python_lint_and_test.yaml  requirements.txt
logilica_cli/: __init__.py  __main__.py  cli_data_sources.py  configuration_schema.py  data_sources.py  page_login.py  page_settings.py  pdf_extract.py  playwright_session.py  weekly_report.py
logilica_weekly_report/: __init__.py  __main__.py  cli_data_sources.py  cli_weekly_report.py  configuration_schema.py  download_pdfs.py  logilica_session.py  page_dashboard.py  page_login.py  page_navigation.py  page_settings.py  pdf_convert.py  pdf_extract.py  playwright_session.py  update_gdoc.py
src/: download_pdfs.py  requirements.txt
tests/: __init__.py  requirements.txt  test_cli_weekly_report.py  test_configuration_schema.py  test_page_settings.py  test_pdf_extract.py  test_placeholder.py  test_update_gdoc.py
tests/fixtures/: config.yaml
