[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logilica-cli"
version = "0.1.0"
description = "A tool which provides CLI access to the Logilica UI."
readme = "README.md"
authors = [{ name = "The Developer Practices Team", email = "developer-productivity@redhat.com" }]
license = {"text" = "Apache-2.0"}

[project.scripts]
logilica-cli = "logilica_cli.__main__:cli"

[tool.autoflake]
exclude = ["build"]
recursive = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
skip-string-normalization = false
skip-magic-trailing-comma = false
include = '\.pyi?$'

[tool.docformatter]
black = true
close-quotes-on-newline = true
exclude = ["build"]
recursive = true
wrap-descriptions = 79
wrap-summaries = 79

[tool.coverage.run]
branch = true
relative_files = true
source = ["logilica_cli", "tests"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
# (Note that these matches are unanchored!)
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]
skip_empty = true

[tool.coverage.html]
skip_empty = true

[tool.isort]
profile = "black"                     # black-compatible (e.g., trailing comma)
known_first_party = ["logilica_cli"]  # use separate section for project sources
force_sort_within_sections = true     # don't separate import vs from
order_by_type = false                 # sort alphabetic regardless of case

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" (regex) strings in TOML
    'ignore:builtin type swig\w* has no __module__ attribute:DeprecationWarning',
    'ignore:deprecated:DeprecationWarning:docling_core.types.doc.document',
]
empty_parameter_set_mark = "xfail"
testpaths = ["tests"]

[tool.setuptools]
packages = ["logilica_cli"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
